k8strain3/network-网络/traefik/test/canary/wrr-ingressroute.yaml
# wrr-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wrr-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`wrr.tf.bltest.kutesmart.cn`)
    kind: Rule
    services:
    - name: app-wrr
      kind: TraefikService
